@@ -127,12 +127,6 @@ RELEASE SHOWSTOPPERS:
 PATCHES ACCEPTED TO BACKPORT FROM TRUNK:
   [ start all new proposals below, under PATCHES PROPOSED. ]
 
-  *) mod_status: PR60647: ACC per connection not available w/ event MPM
-     trunk patch: http://svn.apache.org/r1780280
-     2.4.x patch: svn merge -c 1780280 ^/httpd/httpd/trunk .
-                  (minus CHANGES and ap_mmn.h)
-     +1: jailletc36, jim, rjung
-
   *) Easy patches: synch 2.4.x and trunk
         - core: 80 chars
         - http_core: Clean-uo and style. No functional change overall
